<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".SolicitacaoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/solicitacaoPerfilImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/imagemPerfilDescricao"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/profile_default"
            tools:ignore="ImageContrastCheck" />

        <fragment
            android:id="@+id/animalDetalhesSolicitacaoFragment"
            android:name="com.newhome.AnimalPreviewFragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1.0"
            app:layout_constraintBottom_toTopOf="@+id/rejeitarSolicitacaoButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/solicitacaoPerfilDescricaoText"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/solicitacaoNomeText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/perfilNomeHint"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/solicitacaoPerfilImage" />

        <TextView
            android:id="@+id/solicitacaoPerfilDescricaoText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/perfilDescricaoHint"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/solicitacaoNomeText" />

        <Button
            android:id="@+id/aceitarSolicitacaoButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="5dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="Aceitar"
            app:layout_constraintBaseline_toBaselineOf="@+id/rejeitarSolicitacaoButton"
            app:layout_constraintEnd_toStartOf="@+id/rejeitarSolicitacaoButton"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/rejeitarSolicitacaoButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="Rejeitar"
            app:layout_constraintBottom_toTopOf="@+id/voltarSolicitacaoButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/aceitarSolicitacaoButton" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="Esta pessoa quer adotar o seu bichinho"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/voltarSolicitacaoButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="Voltar"
            app:layout_constraintBottom_toTopOf="@+id/animalBuscadoSolicitacaoButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/cancelarAdocaoSolicitacaoButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="Cancelar adoção"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/animalBuscadoSolicitacaoButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="Animal buscado"
            app:layout_constraintBottom_toTopOf="@+id/cancelarAdocaoSolicitacaoButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
